name:               wedding
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site-wedding
  main-is:          Site.hs
  hs-source-dirs:   src/
  build-depends:    base == 4.*
                  , hakyll == 4.7.*
                  , filepath
  ghc-options:      -threaded
  default-language: Haskell2010
